# textip

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md
test/: CMakeLists.txt  benckmark_trie.cpp  profile.cpp  test_material.hpp  test_trie.cpp
trie/: child_iterator.hpp  double_array.hpp  key_traits.hpp  simple_node.hpp  simple_ptrie.hpp  simple_trie.hpp  sub_trie.hpp  trie.hpp  trie_debug.hpp  trie_iterator.hpp  trie_node_proxy.hpp
utils/: class_helpers.hpp  debug_tools.hpp  mpl.hpp
